add pipe for current date, #17

--- a/src/pages/brewery/brewery.html
+++ b/src/pages/brewery/brewery.html
@@ -34,7 +34,7 @@
         </ion-col>
         <ion-col width-50>
           <div class="brewery-info" (click)="openHours()">
-            <strong>Open now</strong>
+            <strong>{{'Open Now' | today}}</strong>
             <small *ngIf="data.breweryHours">{{data.breweryHours | todayshours}}</small>
           </div>
         </ion-col>
