--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
   <div class="divider">
     <h2 class="center">Nearby Locations</h2>
     <div *ngIf="currentPos">
-      <brewery-list *ngIf="currentPos" [args]="{count:3, orderby:'nearest', lat: currentPos.lat, lng: currentPos.lng}" (loaded)="dismissLoader()"></brewery-list>
+      <brewery-list *ngIf="currentPos" [args]="{orderby:'nearest', lat: currentPos.lat, lng: currentPos.lng}" (loaded)="dismissLoader()"></brewery-list>
       <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
     </div>
     <p *ngIf="!currentPos" class="center">Loading Nearby Breweries</p>
@@ -20,12 +20,14 @@
   </div>
   <div class="divider">
     <h2 class="center">Recently Added</h2>
-    <brewery-list [args]="{count:3}"></brewery-list>
+    <brewery-list [args]="{count:10}"></brewery-list>
     <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
   </div>
+  <!-- Removing this until we have user ratings
   <div class="divider">
     <h2 class="center">Top Rated NC Breweries</h2>
     <brewery-list [args]="{count:3, order: 'top'}"></brewery-list>
     <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
   </div>
+  -->
 </ion-content>
