--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -13,7 +13,7 @@
     <button class="btn-primary" block ion-button (click)="goToSettings()">Edit settings</button>
   </div>
   <button class="btn-light" block ion-button (click)="goToTerms()">Terms &amp; conditions</button>
-  <button class="btn-light" block ion-button (click)="goToPrivacy()">Privacy Policy</button>
+  <!-- <button class="btn-light" block ion-button (click)="goToPrivacy()">Privacy Policy</button> -->
   <div class="divider">
     <a class="link" (click)="goToFeedback()">Feedback and support</a>
     <a class="link" (click)="logOut()">Log out</a>
