--- a/src/pages/terms/terms.html
+++ b/src/pages/terms/terms.html
@@ -4,7 +4,38 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed mi non nunc accumsan pretium. Vestibulum mi eros, imperdiet at posuere nec, dignissim id diam. Aliquam ut pharetra nulla. Duis luctus eros at metus vehicula lacinia. Praesent ultrices odio vitae eros efficitur dapibus. Sed aliquam consequat elit sollicitudin maximus. Fusce eu orci venenatis nisi rhoncus ornare. In hac habitasse platea dictumst. Etiam eu nulla mauris. Sed vel efficitur sapien. Ut volutpat dui ex, ac mattis turpis fermentum nec.</p>
-  <p>Suspendisse sit amet imperdiet felis. Phasellus tempus nulla non elit posuere venenatis. Morbi fermentum dui a tristique hendrerit. Phasellus eget odio nulla. Fusce congue diam eu quam laoreet, sit amet vehicula orci accumsan. Duis semper massa ac neque egestas, vel bibendum erat tristique. Ut posuere risus non nisl aliquam tristique et sed odio. Pellentesque ornare felis ut porttitor auctor. Vivamus laoreet mauris dui, in commodo libero varius sit amet. Vivamus condimentum, est at egestas aliquam, magna eros congue est, id accumsan elit turpis ut massa. Quisque ultricies odio sapien, et congue mi congue et. Vestibulum elementum eu tellus ut pretium. Integer urna ipsum, dictum a ultrices fermentum, rutrum pharetra urna. Maecenas lacus lorem, mollis eu massa non, tincidunt molestie velit.</p>
-  <p>Ut finibus velit a magna sodales efficitur. Donec euismod ex congue urna sollicitudin posuere. Phasellus et interdum est.</p>
+  <p>This privacy policy governs your use of the software application Beer NC (“Application”) for mobile devices that was created by Mann Media. The Application provides a utility for individuals to find breweries in North Carolina and relevant information associated with those breweries.</p>
+  <h2>What information does the Application obtain and how is it used?</h2>
+  <h3>User Provided Information</h3>
+  <p>The Application obtains the information you provide when you download and register the Application. Registration with us is optional. However, please keep in mind that you may not be able to use some of the features offered by the Application unless you register with us.</p>
+  <p>When you register with us and use the Application, you generally provide your name, email address, user name, profile photo, and password.</p>
+  <p>We may also use the information you provided us to contact you from time to time to provide you with important information, required notices, and marketing promotions.</p>
+  <h3>Automatically Collected Information</h3>
+  <p>In addition, the Application may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile devices unique device ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browsers you use, and information about the way you use the Application.</p>
+  <h2>Does the Application collect precise real time location information of the device?</h2>
+  <p>When you visit the mobile application, we may use GPS technology (or other similar technology) to determine your current location in order to determine the city you are located within and display a location map with relevant brewery locations. We will not share your current location with other users or partners.</p>
+  <p>If you do not want us to use your location for the purposes set forth above, you should turn off the location services for the mobile application located in your account settings or in your mobile phone settings and/or within the mobile application.</p>
+  <h2>Do third parties see and/or have access to information obtained by the Application?</h2>
+  <p>No. We will not share your information with third parties.</p>
+  <p>However, we may disclose User Provided and Automatically Collected Information for the following reasons:</p>
+  <ul>
+    <li>as required by law, such as to comply with a subpoena, or similar legal process;</li>
+    <li>when we believe in good faith that disclosure is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, or respond to a government request;</li>
+    <li>with our trusted services providers who work on our behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.</li>
+  </ul>
+  <p>If Mann Media is involved in a merger, acquisition, or sale of all or a portion of its assets, you will be notified via email of any change in ownership or uses of this information, as well as any choices you may have regarding this information.</p>
+  <h2>What are my opt-out rights?</h2>
+  <p>You can stop all collection of information by the Application easily by uninstalling the Application. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network.</p>
+  <h2>Data Retention Policy, Managing Your Information</h2>
+  <p>We will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. We will retain Automatically Collected information for up to 24 months and thereafter may store it in aggregate. If you’d like us to delete User Provided Data that you have provided via the Application, please contact us at support@beerncapp.com and we will respond in a reasonable time. Please note that some or all of the User Provided Data may be required in order for the Application to function properly.</p>
+  <h2>Children and Minors</h2>
+  <p>We do not use the Application to knowingly solicit data from or market to individuals under the age of 21. If a parent or guardian becomes aware that his or her child has provided us with information without their consent, he or she should contact us at <a href="mailto:support@beerncapp.com">support@beerncapp.com</a>. We will delete such information from our files within a reasonable time.</p>
+  <h2>Security</h2>
+  <p>We are concerned about safeguarding the confidentiality of your information. We provide physical, electronic, and procedural safeguards to protect the information we process and maintain. For example, we limit access to this information to authorized employees and contractors who need to know that information in order to operate, develop or improve our Application. Please be aware that, although we endeavor to provide reasonable security for information we process and maintain, no security system can prevent all potential security breaches.</p>
+  <h2>Changes</h2>
+  <p>This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here and informing you via email. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes. You can check the history of this policy by clicking here.</p>
+  <h2>Your Consent</h2>
+  <p>By using the Application, you are consenting to our processing of your information as set forth in this Privacy Policy now and as amended by us. "Processing,” means using cookies on a computer/hand held device or using or touching information in any way, including, but not limited to, collecting, storing, deleting, using, combining and disclosing information, all of which activities will take place in the United States. If you reside outside the United States your information will be transferred, processed and stored there under United States privacy standards.</p>
+  <h2>Contact us</h2>
+  <p>If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at <a href="mailto:support@beerncapp.com">support@beerncapp.com</a>.</p>
 </ion-content>
