--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,8 @@
 <ion-tabs id="tabs">
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Nearby" tabIcon="pin"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Breweries" tabIcon="beer"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Guides" tabIcon="bookmarks"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="Profile" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="home" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="nearby" tabTitle="Nearby" tabIcon="pin"></ion-tab>
+  <ion-tab [root]="breweries" tabTitle="Breweries" tabIcon="beer"></ion-tab>
+  <ion-tab [root]="guides" tabTitle="Guides" tabIcon="bookmarks"></ion-tab>
+  <ion-tab [root]="profile" tabTitle="Profile" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="signin" tabTitle="Sign In" tabIcon="contacts"></ion-tab>
 </ion-tabs>
